# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  sqlx-data.json
.github/workflows/: check.yml
.sqlx/: query-050bf4632b13db4f7fde09fa670a8c8ab76120d1515fe057bb7d91205c40d78c.json  query-1302d572de113c5b0240fc14910eb05f1153d20601a707a484f32704237ef862.json  query-1791e66bae4de0b27a1bc8390eb6fab4c97c733b6e71f7d0e41c161bb938406e.json  query-1886c34158fdea5c37f939da389c09c1ef7c595284460227decccad9fe4c8e12.json  query-1e4e8c4f63d5ad64a703def9f401665a6e8d912974b92a843e1b546bb50324f0.json  query-2327f5b9b00368e50d0483228487a4d7723088c03c74cff033a90fe86b409922.json  query-3bf08be10ef97b209337773e69d2c8121f0c56e6714297a696e1f2e2f705a109.json  query-9b1ae1e5760bce3304d5c83d29bdd582900b21212cfc7aad5d71ce25caa2a548.json  query-a68989fb281c3e1d7b2704414e6f2a1de069eeb9b51a51b9c973ead04d419eac.json  query-bcd9cc0ca81ed893905890722bbf2fd0d197dc60aaa2dd0fdf33f8be49d5c5c3.json  query-bf717ed44ee061a601ada483aa89b6436fe9ec24cfb593013709e8e00ac5ef6b.json  query-cd64f8ea6beab7a94e6f891463c7bdf9af6cfa39f0c615b31979ab185ebf9edb.json
configuration/: base.toml  local.toml  production.toml
migrations/: 20230610015312_create_subscriptions_table.sql  20230715073000_create_subscription_token_table.sql  20231125114238_seed_user.sql  20240103091437_create_idempotency_table.sql  20240121053429_create_newsletter_issues_table.sql  20240128120722_add_retry_at_to_queue.sql
scripts/: init_db.sh  init_redis.sh  start_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  query.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: credentials.rs  middleware.rs  mod.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: error_handlers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
