[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14" }
config = { version = "0.13" }
anyhow = { version = "1" }
chrono = { version = "0.4" }
uuid = { version = "1.3", features = ['v4'] }
tower-http = { version = "0.4", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = { version = "0.1" }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
]

[dev-dependencies]
reqwest = { version = "0.11" }
once_cell = "1"
