[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = { version = "1" }
axum = { version = "0.6", features = ["macros"] }
chrono = { version = "0.4" }
config = { version = "0.13" }
hyper = { version = "0.14" }
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", features = ["json"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = { version = "4" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = { version = "0.1" }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1.3", features = ['v4'] }
validator = "0.16"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "offline",
]

[dev-dependencies]
fake = "~2.3"
linkify = "0.8"
once_cell = "1"
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
