[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = { version = "1" }
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.6", features = ["macros", "headers"] }
axum-flash = "0.7"
base16ct = { version = "0.2", features = ["alloc"] }
base64 = "0.20"                                                                 # 0.21 has a nasty api
chrono = { version = "0.4" }
config = { version = "0.13" }
htmlescape = "0.3"
http = "0.2"
hyper = { version = "0.14" }
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde-aux = { version = "4" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tower-sessions = { version = "0.6", features = ["redis-store"] }
tracing = { version = "0.1" }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
fred = "7"
urlencoding = "2"
uuid = { version = "1.3", features = ["v4", "serde"] }
validator = "0.16"

[dependencies.axum-extra]
version = "0.7"
features = ["cookie", "cookie-signed", "cookie-key-expansion"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "offline",
]

[dev-dependencies]
fake = "~2.3"
linkify = "0.8"
once_cell = "1"
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
